--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,8 +1,17 @@
 body {
-    background-color: rgb(218, 239, 253);
-  }
-  
-  
-  h2 {
-    padding-bottom: 20px;
-  }
+  background-color: rgb(218, 239, 253);
+}
+
+
+h2 {
+  padding-bottom: 20px;
+}
+
+table{
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+th, td{
+  padding: 10px 20px;
+  border: 1px solid #000;
+}
